--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -37,11 +37,11 @@
 }
 
 .style-switcher .style-switcher-toggler {
-    top: 0;
+    top: 0px;
 }
 
 .style-switcher .day-night {
-    top: 55px;
+    top: 60px;
 }
 
 .style-switcher h4 {
@@ -63,7 +63,7 @@
     height: 30px;
     width: 30px;
     border-radius: 50%;
-    border: 1px solid red;
+    border: 1px solid #fff;
     cursor: pointer;
 }
 
@@ -72,17 +72,17 @@
 }
 
 .style-switcher .color-2 {
-    background-color: #fa5b0f;
+    background-color: #6e3b95;
 }
 
 .style-switcher .color-3 {
-    background-color: #37b182;
+    background-color: #5a8fbb;
 }
 
 .style-switcher .color-4 {
-    background-color: #1854b4;
+    background-color: #fa5b0f;
 }
 
 .style-switcher .color-5 {
-    background-color: #f021b2;
+    background-color: #6d6b9b;
 }
