--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ html {
 }
 
 body.dark {
-    --bg-black-900: #151515;
-    --bg-black-100: #222222;
+    --bg-black-900: #1c0522;
+    --bg-black-100: #210b2d;
     --bg-black-50: #393939;
     --text-black-900: #ffffff;
     --text-black-700: #e9e9e9;
@@ -50,7 +50,7 @@ ul {
     display: block;
     padding: 0 30px;
     opacity: 1;
-    position: fixed;
+    position: absolute;
     left: 270px;
     top: 0;
     right: 0;
@@ -168,7 +168,7 @@ ul {
 .aside {
     width: 270px;
     background: var(--bg-black-100);
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     padding: 30px;
@@ -206,7 +206,7 @@ ul {
     content: '';
     position: absolute;
     width: 20px;
-    margin: -10px;
+    margin: -17px;
     height: 20px;
     border-bottom: 5px solid var(--skin-color);
     border-left: 5px solid var(--skin-color);
@@ -219,7 +219,7 @@ ul {
     position: absolute;
     width: 20px;
     height: 20px;
-    margin: -10px;
+    margin: -7px;
     border-top: 5px solid var(--skin-color);
     border-right: 5px solid var(--skin-color);
     top: 0;
@@ -363,8 +363,8 @@ h2.my-profession {
     width: 80px;
     border-bottom: 10px solid var(--skin-color);
     border-right: 10px solid var(--skin-color);
-    right: 20px;
-    bottom: -40px;
+    right: 14px;
+    bottom: -35px;
 }
 
 .home-img::before {
@@ -374,7 +374,7 @@ h2.my-profession {
     width: 80px;
     border-top: 10px solid var(--skin-color);
     border-left: 10px solid var(--skin-color);
-    left: -20px;
+    left: 15px;
     top: -40px;
 }
 
@@ -382,6 +382,10 @@ h2.my-profession {
     margin: auto;
     border-radius: 5px;
     height: 400px;
+}
+
+.home-info .btn {
+    margin-right: 25px;
 }
 
 .about .about-content {
@@ -571,14 +575,24 @@ h2.my-profession {
     color: var(--text-black-900);
 }
 
-.about .about-content .timeline .timeline-title a{
+.about .about-content .timeline .timeline-title a {
     color: var(--skin-color);
+    text-decoration: revert;
+    transition: all 0.3s ease;
+}
+
+.about .about-content .timeline .timeline-title a:hover {
+    color: #1b6ef3;
 }
 
 .about .about-content .timeline .timeline-text {
     line-height: 25px;
     font-size: 16px;
     text-align: justify;
+    color: var(--text-black-700);
+}
+
+.timeline-item li {
     color: var(--text-black-700);
 }
 
@@ -656,7 +670,7 @@ h2.my-profession {
 .portfolio .portfolio-heading {
     flex: 0 0 100%;
     max-width: 100%;
-    margin: 40px;
+    margin: 40px 40px 0px 40px;
 }
 
 .portfolio .portfolio-heading h2 {
@@ -670,17 +684,46 @@ h2.my-profession {
     margin-bottom: 30px;
 }
 
+.portfolio-subheading {
+    margin-bottom: 20px;
+}
+
 .portfolio .portfolio-item-inner {
-    border: 6px solid var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    background-color: var(--bg-black-100);
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
+    padding: 30px;
+    margin-top: 50px;
+    width: 800px;
 }
 
 .portfolio .portfolio-item-inner .portfolio-img img {
-    width: 100%;
     height: 22vh;
     display: block;
+    margin-top: 25px;
+    border-radius: 15px;
+}
+
+.portfolio-img {
+    display: flex;
+    justify-content: space-around;
+}
+
+.portfolio-img-mob {
+    display: flex;
+    gap: 100px;
+}
+
+.portfolio-subheading a {
+    color: var(--skin-color);
+    transition: all 0.2s ease;
+}
+
+.portfolio-subheading a:hover {
+    color: #1b6ef3;
+    text-decoration: underline;
 }
 
 /* Contact */
@@ -774,6 +817,7 @@ h2.my-profession {
     padding: 0 50px;
 }
 
+
 @media (max-width:1199px) {
     .section .container {
         padding-top: 70px;
@@ -782,6 +826,8 @@ h2.my-profession {
     .aside {
         left: -270px;
     }
+
+
 
     .aside.open {
         left: 0;
@@ -792,9 +838,6 @@ h2.my-profession {
         left: 30px;
     }
 
-    .aside .nav-toggler.open {
-        left: 300px;
-    }
 
     .section {
         left: 0;
@@ -842,4 +885,82 @@ h2.my-profession {
         flex: 0 0 100%;
         max-width: 100%;
     }
+}
+
+
+@media (max-width:422px) {
+    .home-info .btn {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width:899px) {
+    .portfolio .portfolio-item-inner {
+        width: 500px;
+    }
+
+    .portfolio .portfolio-item-inner .portfolio-img img {
+        height: 80%;
+    }
+
+    .portfolio-img {
+        flex-direction: column;
+        width: 80%;
+    }
+
+    .portfolio-img .mob {
+        width: 30%;
+    }
+
+    .portfolio-img-mob {
+        display: flex;
+        flex-direction: row;
+        gap: 100px;
+    }
+}
+
+@media (max-width:587px) {
+    .portfolio .portfolio-item-inner {
+        width: 400px;
+    }
+}
+
+@media (max-width:487px) {
+    .portfolio .portfolio-item-inner {
+        width: 300px;
+    }
+
+    .portfolio-img-mob {
+        gap: 70px
+    }
+
+    @media (max-width:387px) {
+        .portfolio .portfolio-item-inner {
+            width: 250px;
+        }
+
+        .portfolio-img {
+            width: 100%;
+        }
+    }
+
+    @media (max-width:330px) {
+        .portfolio-item {
+            margin-left: -20px;
+        }
+
+        .portfolio .portfolio-heading {
+            margin-left: 0px;
+        }
+    }
+}
+
+
+
+
+.work-sample {
+    display: flex;
+    flex-direction: column;
+    width: 800px;
+    color: var(--text-black-700);
 }
